--- a/src/app.module.css
+++ b/src/app.module.css
@@ -3,3 +3,15 @@
   padding: 10px;
   border: 2px solid skyblue;
 }
+
+.button {
+  background-color: tomato;
+  color: white;
+  padding: 5px;
+  margin-top: 5px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  width: 100px;
+  text-align: center;
+}
